# wavplayer

./: README.md  README.txt  alsa.cpp  alsa.hh  main.cpp  meson.build  player.service  start.sh  wavreader.c  wavreaderpp.cpp  wavreaderpp.hh  wdt.cpp  wdt.hh
inc/: alsa.hh  alsaexception.hpp  watchdogexception.hpp  wavreader.h  wavreaderexception.hpp  wavreaderpp.hh  wdt.hh
res/: README.txt  start.sh
src/: alsa.cpp  main.cpp  wavreader.c  wavreaderpp.cpp  wdt.cpp
